src/objects/ORDO_Bus__c.object
<CustomObject>
    <fields>
        <fullName>Bus_Brand__c</fullName>
        <label>Bus Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Brand1</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bus_Model__c</fullName>
        <label>Bus Model</label>
        <picklist>
            <picklistValues>
                <fullName>Model1</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Year__c</fullName>
        <label>Production Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Registration Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <label>Seat</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BN-{0000}</displayFormat>
        <label>Bus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>